# airline-sentiment-classifier

./: .gitattributes  .gitignore  DATA_LICENSES.md  MODEL_CARD.md  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
demo/: app.py
notebooks/: airline_sentiment_analysis.ipynb
outputs/metrics/: classification_report.csv  evaluation_summary.json  generalization_slices.csv  holdout_uncertainty.csv  model_comparison.csv  top_features.csv
scripts/: build_notebook.py  download_data.py  run_notebook.py
src/airline_sentiment/: __init__.py  cli.py  data.py  inference.py  modeling.py  training.py
tests/: test_data.py  test_inference.py  test_modeling.py  test_published_artifacts.py  test_training.py
