[project]
name = "airline-sentiment-classifier"
version = "1.0.0"
description = "Leakage-aware sentiment classification for U.S. airline tweets"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "AfifFarihin" }]
dependencies = [
  "joblib==1.5.3",
  "matplotlib==3.10.8",
  "numpy==1.26.4",
  "pandas==2.3.3",
  "requests>=2.32,<3",
  "scikit-learn==1.8.0",
]

[project.optional-dependencies]
demo = [
  "streamlit>=1.45,<2",
]
notebooks = [
  "ipykernel==7.1.0",
  "jupyterlab==4.6.0",
  "nbclient==0.10.2",
  "nbformat==5.10.4",
]

[project.scripts]
airline-sentiment = "airline_sentiment.cli:main"

[dependency-groups]
dev = [
  "pip-audit>=2.9,<3",
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airline_sentiment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
